# klasifikasi_pakaian

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
