[project]
name = "klasifikasi-pakaian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
